[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/FireAttack.gd" type="Script" id=1]
[ext_resource path="res://Scenes/FireParticle.tscn" type="PackedScene" id=2]

[node name="FireAttack" type="Node2D"]
script = ExtResource( 1 )

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[node name="ParticleTimer" type="Timer" parent="."]

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 176, -50, 209, -9, 176, 55, 126, 43, 0.25, 0.5, 95, -39 )
disabled = true

[node name="Fire" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 0 )
rotation = 3.1308
amount = 24
lifetime_randomness = 0.0
direction = Vector2( -1, 0 )

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[editable path="Fire"]
